# as16

./: .gitignore  CMakeLists.txt  Makefile  README.md  as.h  as.y  disasm.c  test.asm  y.tab.c  y.tab.h
.github/: FUNDING.yml
.github/workflows/: cmake.yml
